--- a/p3rr.html
+++ b/p3rr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Hello World</title>
     <script src="./p3rr.js"></script>
-    <script src="./example.js"></script>
+    <script src="./example.js" defer></script>
 </head>
 <body>
     <canvas width="1600" height="900" style="border: solid 1px red"></canvas>
